--- a/css/center.css
+++ b/css/center.css
@@ -213,37 +213,6 @@ dl {
     .out .up:hover {
       background: #c10055; }
 
-.foot-wrap {
-  width: 100%;
-  background: #ec056b;
-  position: fixed;
-  bottom: 0;
-  z-index: 9999; }
-
-.foot {
-  width: 1200px;
-  height: 54px;
-  margin: 0 auto;
-  background: url(../img/M12_4_214138.png) no-repeat center;
-  cursor: pointer; }
-
-.fly {
-  position: fixed;
-  right: 70px;
-  top: 300px;
-  cursor: pointer;
-  display: none; }
-  .fly a {
-    display: block;
-    width: 100px;
-    height: 30px;
-    position: absolute;
-    bottom: 10px;
-    left: 0; }
-  .fly img {
-    width: 100px;
-    height: 353px; }
-
 .top-wrap {
   width: 100%;
   background: #f6f6f6; }
@@ -434,251 +403,73 @@ dl {
     .nav .right1 img {
       margin-top: 26px; }
 
-.head-wrap {
+.banner {
+  margin: 0 auto;
+  width: 1200px; }
+  .banner img {
+    width: 1200px; }
+
+.foot-wrap {
   width: 100%;
-  background: #404040; }
-  .head-wrap .head {
+  background: #ececec; }
+  .foot-wrap .foot {
     width: 1080px;
-    height: 36px;
-    margin: 0 auto;
-    position: relative; }
-    .head-wrap .head .hot1 {
-      width: 20px;
-      height: 20px;
-      background: red;
-      border-radius: 50%;
-      position: absolute;
-      top: -10px;
-      right: 5px;
-      color: white;
-      font-size: 10px; }
-    .head-wrap .head .guan li {
-      margin: 0 15px;
-      line-height: 30px;
-      float: left; }
-      .head-wrap .head .guan li a {
-        font-family: iconfont;
-        color: white;
-        padding-bottom: 5px;
+    height: 160px;
+    margin: 0 auto; }
+    .foot-wrap .foot .foot-list {
+      float: left;
+      margin: 20px 25px; }
+      .foot-wrap .foot .foot-list a {
+        color: #7f7f7f;
         font-size: 12px; }
-        .head-wrap .head .guan li a:hover {
-          color: #f33e50;
-          border-bottom: 1px solid #f33e50; }
-    .head-wrap .head .zhuanji {
+    .foot-wrap .foot .erweima {
       float: right; }
-      .head-wrap .head .zhuanji li {
-        margin: 0 15px;
-        line-height: 30px;
-        float: left; }
-        .head-wrap .head .zhuanji li > #a5 {
-          color: #f33e50;
-          border: none; }
-          .head-wrap .head .zhuanji li > #a5:hover {
-            color: white; }
-        .head-wrap .head .zhuanji li a {
-          font-family: iconfont;
-          color: white;
-          padding-bottom: 5px;
-          font-size: 12px; }
-          .head-wrap .head .zhuanji li a:hover {
-            color: #f33e50;
-            border-bottom: 1px solid #f33e50; }
 
-.banner-wrap {
-  width: 100%;
-  background: url(../img/M12_4_171625_01.jpg) no-repeat center; }
-  .banner-wrap .banner {
-    width: 1080px;
-    height: 1848px;
-    position: relative;
-    margin: 0 auto;
-    cursor: pointer; }
-    .banner-wrap .banner .img1 {
-      width: 100%;
-      height: 208px;
-      position: absolute;
-      top: 904px;
-      left: -58px; }
-    .banner-wrap .banner #time span:nth-child(1) {
-      position: absolute;
-      font-size: 120px;
-      font-weight: 900;
-      color: #ff00c0;
-      top: 970px;
-      left: -70px; }
-    .banner-wrap .banner #time span:nth-child(2) {
-      position: absolute;
-      font-size: 120px;
-      font-weight: 900;
-      color: #ff00c0;
-      top: 970px;
-      left: 270px; }
-    .banner-wrap .banner #time span:nth-child(3) {
-      position: absolute;
-      font-size: 120px;
-      font-weight: 900;
-      color: #ff00c0;
-      top: 970px;
-      right: 380px; }
-    .banner-wrap .banner #time span:nth-child(4) {
-      position: absolute;
-      font-size: 120px;
-      font-weight: 900;
-      color: #ff00c0;
-      top: 970px;
-      right: 140px; }
-
-.bg-wrap {
-  width: 100%;
-  background: url(../img/M12_4_171625_02.jpg) no-repeat center; }
-  .bg-wrap .bg {
-    cursor: pointer;
-    width: 1080px;
-    height: 1382px; }
-
-.bg1-wrap {
-  width: 100%;
-  background: url(../img/M12_4_171625_03.jpg) no-repeat center; }
-  .bg1-wrap .bg1 {
-    cursor: pointer;
-    width: 1080px;
-    height: 700px; }
-
-.bg2-wrap {
-  width: 100%;
-  background: url(../img/M12_4_171625_04.jpg) no-repeat center; }
-  .bg2-wrap .bg2 {
-    cursor: pointer;
-    width: 1080px;
-    height: 1522px; }
-
-.today {
+.foot-img {
   width: 1080px;
-  height: 100%;
-  margin: 0 auto; }
-  .today .dlist {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between; }
-    .today .dlist dl {
-      width: 208px;
-      height: 336px;
-      float: left;
-      margin-top: 20px; }
-      .today .dlist dl a {
-        display: block;
-        width: 208px;
-        height: 33px;
-        display: flex; }
-      .today .dlist dl img {
-        width: 208px;
-        height: 280px; }
-      .today .dlist dl dd {
-        cursor: pointer;
-        color: white;
-        padding: 2px;
-        text-align: center;
-        width: 200px;
-        height: 24px;
-        background: #ef2078; }
+  margin: 0 auto;
+  text-align: center; }
+  .foot-img img {
+    border-right: 1px solid #DDDDDD;
+    margin: 20px; }
 
-.good {
+.foot-word {
+  margin-top: 30px;
   width: 1080px;
-  height: 100%;
-  margin: 10px auto 0; }
-  .good .box ul {
-    width: 1080px;
-    height: 44px;
-    margin: 0 auto;
-    background: url("../img/M12_4_171455_11.jpg") no-repeat center; }
-    .good .box ul li {
-      float: left;
-      width: 335px;
-      height: 100%;
-      margin-left: 7px; }
-      .good .box ul li:first-child {
-        margin: 0; }
-      .good .box ul li:nth-child(2) {
-        width: 396px; }
-  .good .box1 ul {
-    width: 1080px;
-    height: 44px;
-    margin: 0 auto;
-    background: url("../img/M12_4_171455_13.jpg") no-repeat center; }
-    .good .box1 ul li {
-      float: left;
-      width: 335px;
-      height: 100%;
-      margin-left: 7px; }
-      .good .box1 ul li:first-child {
-        margin: 0; }
-      .good .box1 ul li:nth-child(2) {
-        width: 396px; }
-  .good .box2 ul {
-    width: 1080px;
-    height: 44px;
-    margin: 0 auto;
-    background: url("../img/M12_4_171455_15.jpg") no-repeat center; }
-    .good .box2 ul li {
-      float: left;
-      width: 335px;
-      height: 100%;
-      margin-left: 7px; }
-      .good .box2 ul li:first-child {
-        margin: 0; }
-      .good .box2 ul li:nth-child(2) {
-        width: 396px; }
-  .good .dl {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    cursor: pointer; }
-    .good .dl dl {
-      position: relative;
-      width: 208px;
-      height: 368px;
-      float: left;
-      margin-top: 20px; }
-      .good .dl dl .jingbao {
-        background: red;
-        width: 88px;
-        height: 88px;
-        border-radius: 50%;
-        text-align: center;
-        line-height: 42px;
-        position: absolute;
-        bottom: 50px;
-        right: 0; }
-        .good .dl dl .jingbao p:first-child {
-          border-bottom: 1px solid #DDDDDD;
-          font-size: 12px;
-          color: white; }
-        .good .dl dl .jingbao p:nth-child(2) {
-          font-size: 24px;
-          color: white; }
-    .good .dl img {
-      width: 208px;
-      height: 280px; }
-    .good .dl dd {
-      width: 208px;
-      height: 94px; }
-      .good .dl dd p:first-child {
-        color: black;
-        font-size: 10px;
-        text-indent: 20px; }
-      .good .dl dd p:nth-child(2) {
-        color: #ff0000;
-        font-size: 14px;
-        text-indent: 20px; }
-        .good .dl dd p:nth-child(2) span {
-          color: #ff0000;
-          font-size: 18px; }
-      .good .dl dd p:nth-child(3) {
-        width: 204px;
-        height: 32px;
-        background: #e81895;
-        color: white;
-        padding-top: 5px;
-        text-align: center; }
+  margin: 0 auto;
+  text-align: center;
+  line-height: 30px; }
+  .foot-word a {
+    color: #797979;
+    font-size: 14px; }
 
-/*# sourceMappingURL=style.css.map */
+.smallimg {
+  padding-top: 50px;
+  width: 1080px;
+  margin: 0 auto;
+  text-align: center; }
+
+.last-wrap {
+  width: 100%;
+  background: #f7f7f7; }
+  .last-wrap .last {
+    height: 640px; }
+    .last-wrap .last .last-top {
+      width: 1280px;
+      height: 114px;
+      margin: 0 auto; }
+    .last-wrap .last .last-bottom {
+      width: 1280px;
+      height: 530px;
+      margin: 0 auto; }
+      .last-wrap .last .last-bottom .list li {
+        background: white;
+        width: 388px;
+        height: 215px;
+        float: left;
+        margin: 19px; }
+        .last-wrap .last .last-bottom .list li img {
+          width: 388px;
+          height: 184px; }
+
+/*# sourceMappingURL=center.css.map */
