--- a/css/shopcar.css
+++ b/css/shopcar.css
@@ -9,6 +9,9 @@ a {
   text-decoration: none;
   font-family: iconfont; }
 
+img {
+  vertical-align: bottom; }
+
 @font-face {
   font-family: 'iconfont';
   src: url("../font4/iconfont.eot");
@@ -17,7 +20,7 @@ a {
   width: 1291px;
   height: 65px;
   margin: 0 auto;
-  background: url(../imgshop/M12_5_103400.jpg);
+  background: url("../imgshop/M12_5_103400.jpg");
   position: relative; }
   .top1 img {
     float: right;
@@ -39,7 +42,8 @@ a {
       cursor: pointer; }
     .top-wrap .top .list {
       float: right;
-      position: relative; }
+      position: relative;
+      z-index: 9000; }
       .top-wrap .top .list li {
         float: left; }
         .top-wrap .top .list li a {
@@ -126,15 +130,452 @@ a {
       display: flex; }
       .all-wrap .all .shoes div {
         border-bottom: 1px solid #DDDDDD;
-        margin: 0px 10px; }
+        margin: 0 10px; }
       .all-wrap .all .shoes .woman {
         width: 140px;
         height: 214px; }
 
 .nav {
   width: 1280px;
-  height: 102px;
-  background: red;
-  line-height: 102px; }
+  height: 82px;
+  margin: 0 auto;
+  background: url(../imgshop/logomoonbasa.png) no-repeat left;
+  padding-top: 20px; }
+  .nav .serve .serve-left {
+    float: left;
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    padding-left: 20px;
+    margin-left: 250px;
+    border-left: 1px solid #DDDDDD;
+    margin-top: 10px; }
+    .nav .serve .serve-left .moxiang {
+      color: #555555;
+      font-size: 12px;
+      cursor: pointer; }
+    .nav .serve .serve-left .pmoxiang {
+      background: black;
+      color: white;
+      cursor: pointer; }
+  .nav .serve .serve-right {
+    width: 650px;
+    height: 40px;
+    float: right; }
+    .nav .serve .serve-right .box-input {
+      display: flex;
+      position: relative; }
+      .nav .serve .serve-right .box-input .serve-input {
+        width: 474px;
+        height: 40px;
+        outline: none;
+        box-sizing: border-box;
+        border: 1px solid #e40462;
+        text-indent: 30px; }
+      .nav .serve .serve-right .box-input #list {
+        position: absolute;
+        top: 40px;
+        left: 0;
+        background: white; }
+        .nav .serve .serve-right .box-input #list li {
+          width: 444px;
+          height: 20px;
+          border: 1px dashed #D4D4D4;
+          padding: 5px; }
+          .nav .serve .serve-right .box-input #list li:hover {
+            background: #ddd; }
+      .nav .serve .serve-right .box-input .btn1 {
+        width: 100px;
+        height: 40px;
+        background: #e40462;
+        border: none;
+        box-sizing: border-box;
+        outline: none; }
+      .nav .serve .serve-right .box-input .btn2 {
+        width: 100px;
+        height: 40px;
+        background: black;
+        color: white;
+        border: none;
+        box-sizing: border-box;
+        outline: none;
+        margin-left: 3px; }
+
+.logo-img {
+  width: 1280px;
+  height: 130px;
+  margin: 0 auto; }
+  .logo-img img {
+    width: 1280px;
+    height: 130px; }
+
+.logo-wrap {
+  width: 100%;
+  background: #ac0c70; }
+  .logo-wrap .logo {
+    width: 1280px;
+    height: 38px;
+    margin: 0 auto; }
+    .logo-wrap .logo .logo-list {
+      width: 1280px;
+      height: 38px; }
+      .logo-wrap .logo .logo-list li {
+        float: left;
+        padding: 8px 45px;
+        border-right: 1px solid #900040; }
+        .logo-wrap .logo .logo-list li a {
+          color: white; }
+
+.details {
+  width: 1256px;
+  height: 875px;
+  margin: 0 auto;
+  padding-left: 24px; }
+  .details .details-list {
+    width: 1280px;
+    height: 22px;
+    margin-top: 38px; }
+    .details .details-list li {
+      float: left; }
+      .details .details-list li a {
+        color: #DDDDDD; }
+  .details .details-img {
+    width: 1256px;
+    height: 816px; }
+    .details .details-img #enlarge-box {
+      float: left;
+      width: 420px;
+      height: 690px;
+      position: relative; }
+      .details .details-img #enlarge-box #middle-box {
+        width: 420px;
+        height: 560px;
+        position: relative; }
+        .details .details-img #enlarge-box #middle-box #shadow {
+          position: absolute;
+          left: -1000px;
+          top: 0;
+          width: 75px;
+          height: 104px;
+          background: white;
+          opacity: 0.5; }
+        .details .details-img #enlarge-box #middle-box img {
+          width: 420px;
+          height: 560px; }
+      .details .details-img #enlarge-box #large-box {
+        width: 420px;
+        height: 560px;
+        display: none;
+        float: left;
+        margin-left: 10px;
+        position: absolute;
+        left: 420px;
+        top: 0;
+        overflow: hidden; }
+        .details .details-img #enlarge-box #large-box img {
+          width: 2940px;
+          height: 3920px;
+          position: absolute; }
+      .details .details-img #enlarge-box #small-box {
+        width: 390px;
+        height: 100px;
+        padding-left: 30px; }
+        .details .details-img #enlarge-box #small-box a {
+          color: #DDDDDD;
+          display: block;
+          position: absolute;
+          bottom: 40px;
+          width: 24px;
+          height: 50px;
+          font-size: 40px; }
+        .details .details-img #enlarge-box #small-box #left-a {
+          left: 0; }
+        .details .details-img #enlarge-box #small-box #right-a {
+          right: 0; }
+        .details .details-img #enlarge-box #small-box img {
+          width: 64px;
+          height: 78px; }
+    .details .details-img .details-center {
+      width: 714px;
+      height: 785px;
+      border-right: 1px solid #DDDDDD;
+      float: left; }
+      .details .details-img .details-center h2 {
+        width: 618px;
+        margin-left: 54px; }
+      .details .details-img .details-center .img-top {
+        width: 618px;
+        height: 52px;
+        margin-left: 54px; }
+      .details .details-img .details-center .price {
+        width: 618px;
+        height: 152px;
+        background: url("../imgshop/goods_price_bg.png");
+        margin-left: 54px; }
+        .details .details-img .details-center .price .price1 {
+          width: 618px;
+          height: 90px;
+          display: flex;
+          justify-content: space-between; }
+          .details .details-img .details-center .price .price1 .price1-1 {
+            width: 160px;
+            height: 43px;
+            display: flex;
+            margin-top: 20px; }
+            .details .details-img .details-center .price .price1 .price1-1 span {
+              font-size: 40px;
+              color: #e8257b; }
+            .details .details-img .details-center .price .price1 .price1-1 .price1-3 {
+              width: 60px;
+              height: 50px;
+              background: url(../imgshop/p01.png) no-repeat top;
+              background-size: 100%; }
+              .details .details-img .details-center .price .price1 .price1-1 .price1-3 p {
+                margin-left: 10px; }
+          .details .details-img .details-center .price .price1 .price1-4 {
+            width: 163px;
+            height: 43px;
+            float: right;
+            border-top: 1px dashed red;
+            margin-top: 20px; }
+        .details .details-img .details-center .price .price2 {
+          display: flex;
+          justify-content: space-between;
+          margin-top: 20px; }
+          .details .details-img .details-center .price .price2 .price-list {
+            float: left; }
+            .details .details-img .details-center .price .price2 .price-list li {
+              float: left;
+              margin: 0 4px; }
+          .details .details-img .details-center .price .price2 .price2-1 {
+            float: right; }
+            .details .details-img .details-center .price .price2 .price2-1 a {
+              color: black; }
+      .details .details-img .details-center .color {
+        width: 618px;
+        height: 468px;
+        margin-left: 54px; }
+        .details .details-img .details-center .color .colorr {
+          margin-top: 10px; }
+          .details .details-img .details-center .color .colorr span {
+            font-size: 10px; }
+        .details .details-img .details-center .color .color-list {
+          width: 370px; }
+          .details .details-img .details-center .color .color-list li {
+            width: 108px;
+            height: 44px;
+            border: 1px solid #DDDDDD;
+            line-height: 44px;
+            float: left;
+            margin: 10px 5px;
+            color: #DDDDDD; }
+            .details .details-img .details-center .color .color-list li img {
+              width: 35px;
+              height: 44px;
+              border: 1px solid #DDDDDD; }
+        .details .details-img .details-center .color .color-list1 {
+          width: 370px; }
+          .details .details-img .details-center .color .color-list1 li {
+            width: 108px;
+            height: 44px;
+            border: 1px solid #DDDDDD;
+            line-height: 44px;
+            float: left;
+            margin: 10px;
+            color: #DDDDDD; }
+            .details .details-img .details-center .color .color-list1 li img {
+              width: 35px;
+              height: 44px;
+              border: 1px solid #DDDDDD; }
+        .details .details-img .details-center .color .num {
+          width: 90px;
+          height: 45px;
+          border: 1px solid #DDDDDD;
+          display: flex;
+          margin-left: 10px; }
+          .details .details-img .details-center .color .num .num1 {
+            width: 62px;
+            height: 37px;
+            text-align: center;
+            font-size: 20px;
+            line-height: 45px; }
+          .details .details-img .details-center .color .num .num2 {
+            text-align: center;
+            cursor: pointer; }
+          .details .details-img .details-center .color .num .numm1 {
+            border: 1px solid #DDDDDD;
+            height: 20px;
+            width: 30px; }
+            .details .details-img .details-center .color .num .numm1 img {
+              width: 24px;
+              height: 16px; }
+          .details .details-img .details-center .color .num .numm2 {
+            border: 1px solid #DDDDDD;
+            height: 20px;
+            width: 30px; }
+            .details .details-img .details-center .color .num .numm2 img {
+              width: 24px;
+              height: 16px; }
+        .details .details-img .details-center .color .btn {
+          display: flex;
+          margin-top: 20px; }
+          .details .details-img .details-center .color .btn .btn1 {
+            width: 228px;
+            height: 60px;
+            border: 1px solid #D1005B;
+            background: white;
+            color: #D1005B;
+            font-size: 20px;
+            outline: none; }
+          .details .details-img .details-center .color .btn .btn2 {
+            width: 228px;
+            height: 60px;
+            border: 1px solid #D1005B;
+            margin-left: 35px;
+            background: #D1005B;
+            color: white;
+            font-size: 20px;
+            outline: none; }
+        .details .details-img .details-center .color .tui li {
+          float: left;
+          margin: 10px; }
+    .details .details-img .right {
+      text-align: center; }
+      .details .details-img .right img {
+        margin-top: 30px; }
+      .details .details-img .right span {
+        font-size: 20px; }
+      .details .details-img .right .span-add .spanadd {
+        width: 20px;
+        height: 20px;
+        cursor: pointer; }
+      .details .details-img .right .span-add .spanremove {
+        width: 20px;
+        height: 20px;
+        cursor: pointer; }
+
+.listbox {
+  width: 1280px;
+  margin: 0 auto;
+  display: flex; }
+  .listbox .list-left {
+    width: 232px; }
+    .listbox .list-left img {
+      width: 190px;
+      height: 330px; }
+    .listbox .list-left .last {
+      width: 150px;
+      height: 390px;
+      border: 1px solid #DDDDDD;
+      padding: 20px; }
+      .listbox .list-left .last .last-span {
+        color: #E00363; }
+      .listbox .list-left .last img {
+        width: 140px; }
+    .listbox .list-left .see {
+      background: #DDDDDD;
+      width: 190px;
+      height: 45px;
+      display: block;
+      text-align: center;
+      line-height: 45px;
+      color: white;
+      cursor: pointer; }
+  .listbox .list {
+    width: 1070px;
+    border-left: 1px solid #DDDDDD;
+    border-right: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
+    float: right; }
+    .listbox .list .bigimg .table {
+      height: 56px;
+      width: 1070px;
+      background: #DDDDDD; }
+      .listbox .list .bigimg .table .li1 {
+        border-top: 2px solid #e60060;
+        background: white; }
+      .listbox .list .bigimg .table li {
+        padding: 16px 54px;
+        float: left;
+        cursor: pointer;
+        border-top: 2px solid #DDD;
+        background: #DDDDDD; }
+    .listbox .list .bigimg #fly {
+      height: 56px;
+      width: 1080px;
+      background: #DDDDDD;
+      position: fixed;
+      top: 0;
+      right: 60px;
+      display: none; }
+      .listbox .list .bigimg #fly .li1 {
+        border-top: 2px solid #e60060;
+        background: white; }
+      .listbox .list .bigimg #fly #fly1 {
+        float: right; }
+        .listbox .list .bigimg #fly #fly1 #img-erweima {
+          display: none; }
+      .listbox .list .bigimg #fly li {
+        padding: 16px 54px;
+        float: left;
+        cursor: pointer;
+        border-top: 2px solid #DDD;
+        background: #DDDDDD; }
+    .listbox .list .bigimg img {
+      width: 824px;
+      margin-left: 140px; }
+    .listbox .list .three {
+      display: none;
+      margin-left: 140px; }
+    .listbox .list .two {
+      display: none; }
+    .listbox .list .allimg {
+      width: 824px;
+      display: flex;
+      justify-content: space-between;
+      margin-left: 140px; }
+      .listbox .list .allimg .allimg1 {
+        margin-left: 0;
+        width: 342px; }
+
+.foot-wrap {
+  width: 100%;
+  background: #ececec; }
+  .foot-wrap .foot {
+    width: 1080px;
+    height: 160px;
+    margin: 0 auto; }
+    .foot-wrap .foot .foot-list {
+      float: left;
+      margin: 20px 25px; }
+      .foot-wrap .foot .foot-list a {
+        color: #7f7f7f;
+        font-size: 12px; }
+    .foot-wrap .foot .erweima {
+      float: right; }
+
+.foot-img {
+  width: 1080px;
+  margin: 0 auto;
+  text-align: center; }
+  .foot-img img {
+    border-right: 1px solid #DDDDDD;
+    margin: 20px; }
+
+.foot-word {
+  margin-top: 30px;
+  width: 1080px;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 30px; }
+  .foot-word a {
+    color: #797979;
+    font-size: 14px; }
+
+.smallimg {
+  padding-top: 50px;
+  width: 1080px;
+  margin: 0 auto;
+  text-align: center; }
 
 /*# sourceMappingURL=shopcar.css.map */
