--- a/css/entry.css
+++ b/css/entry.css
@@ -136,7 +136,12 @@ body {
           height: 40px;
           margin-top: 46px;
           margin-left: 10px;
-          border: 1px solid black; }
+          border: 1px solid black;
+          background: red;
+          text-align: center;
+          font-size: 50px;
+          line-height: 35px;
+          font-weight: 900; }
       .box .right .form .w {
         width: 324px;
         height: 40px;
