--- a/css/regsiter.css
+++ b/css/regsiter.css
@@ -119,7 +119,12 @@ body {
           height: 40px;
           margin-top: 30px;
           margin-left: -30px;
-          border: 1px solid black; }
+          border: 1px solid black;
+          text-align: center;
+          line-height: 40px;
+          font-weight: 900;
+          font-size: 40px;
+          background: red; }
       .box .right .form .btn {
         background: #e30165;
         padding: 12px 90px;
